<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/shopping_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_login_signup"
        android:title="@string/login_signup"
        app:showAsAction="never"
        android:theme="@style/MenuItemTextColorPurple" />

    <!-- Thêm Mục Menu "Xem thông tin cửa hàng" -->
    <item
        android:id="@+id/action_store_info"
    android:title="@string/store_info"
    app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>