<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_item"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/add_item_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_item_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_description"
            android:inputType="textMultiLine"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_item_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/add_item_image_url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_url"
            android:inputType="textUri"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/add_item_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_category"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item" />

    </LinearLayout>
</ScrollView>